# cpp-learning

./: .gitignore  CMakeLists.txt  README.md  build.py  cpp_concepts.md
concurrency_and_multithreading/: CMakeLists.txt  deadlock_free_locking.cpp  mutex_locking_strategies_1.cpp  mutex_locking_strategies_2.cpp  mutex_types.cpp  thread_synchronization.cpp
concurrency_and_multithreading/atomic/: CMakeLists.txt  atomic_flag_spinlock.cpp  atomic_increment.cpp  atomic_memory_order.cpp  atomic_operation.cpp  lock_free_stack.cpp
concurrency_and_multithreading/condition_variable/: CMakeLists.txt  condition_variable_1.cpp  condition_variable_2.cpp  condition_variable_3.cpp  producer_consumer.cpp
concurrency_and_multithreading/deadlock/: CMakeLists.txt  deadlock_simulation.cpp
concurrency_and_multithreading/mutex/: CMakeLists.txt
design_pattern/: CMakeLists.txt  design_pattern.md
design_pattern/abstract_factory/: CMakeLists.txt  abstract_factory.md  macos_audio_decoder.hpp  macos_audio_player.hpp  macos_factory.hpp  macos_video_decoder.hpp  macos_video_player.hpp  main.cpp  media_decoder.hpp  media_factory.hpp  media_player.hpp  windows_audio_decoder.hpp  windows_audio_player.hpp  windows_factory.hpp  windows_video_decoder.hpp  windows_video_player.hpp
design_pattern/factory_method/: CMakeLists.txt  factory_method.md
design_pattern/factory_method/simple_example/: CMakeLists.txt  document.hpp  document_creator.hpp  main.cpp  pdf_document.hpp  pdf_document_creator.hpp  word_document.hpp  word_document_creator.hpp
design_pattern/singleton/: CMakeLists.txt  configuration_manager.hpp  main.cpp  singleton.md  singleton_1.cpp  singleton_2.cpp
oops/: CMakeLists.txt  multilevel_inheritance.cpp  multiple_inheritance.cpp  operator_overloading.cpp  osstream_and_isstream.md  types_of_classes.cpp
oops/access_specifier/: CMakeLists.txt  access_specifiers.cpp  access_specifiers_1.cpp
oops/class_and_function/: CMakeLists.txt  callable_objects.cpp  callback.cpp  constant_and_pointers.cpp  copy_and_move_semantics.cpp  friend_class_and_friend_function.cpp  lambda_function.cpp  lambda_function_1.cpp  lvalue_and_rvalue.cpp  virtual_and_pure_virtual_function.cpp
oops/class_and_function/static/: CMakeLists.txt  file_1.cpp  file_2.cpp  static.cpp  static_demo_class.hpp
oops/inheritance/: CMakeLists.txt  hierarchical_inheritance.cpp  inheritance  multiple_inheritance.cpp  single_inheritance  single_inheritance.cpp
oops/polymorphism/: CMakeLists.txt  abstract_classes_and_polymorphism.cpp  compiletime_polymorphism.cpp  polymorphism.md  runtime_polymorphism.cpp
principles/: CMakeLists.txt
principles/tightly_and_loosely_coupled/: CMakeLists.txt  loosely_coupled.cpp  tightly_and_loosely_coupled.md  tightly_coupled.cpp
smart_pointers/: CMakeLists.txt  smart_pointer.cpp  smart_pointer_1.cpp  smart_pointer_2.cpp
template/: CMakeLists.txt  template.cpp
